<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.arink_group.deliveryapp.presentation.view.fragment.AccountFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/big_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/big_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/medium_margin"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/account_main"
                android:background="@color/colorSecondary"
                android:textColor="@color/colorOnSecondaryText"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="@string/account_name"
                    android:id="@+id/account_name"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_email"
                    android:id="@+id/account_email"
                    android:inputType="textWebEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_phone"
                    android:id="@+id/account_phone"
                    android:inputType="phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/medium_margin"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/account_addresses"
                android:background="@color/colorSecondary"
                android:textColor="@color/colorOnSecondaryText"/>

            <Button
                style="@style/AppTheme.MyButton"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/summary_create_address_button"
                android:text="@string/account_address" />

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/addresses_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/send_account_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorOnAccentText"
                app:spinning_bar_color="@color/colorOnAccentText"
                android:text="@string/account_idle"
                android:padding="@dimen/medium_margin"
                android:layout_margin="@dimen/big_margin"
                app:spinning_bar_padding="0dp"
                />



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
