<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/big_margin"
    tools:context="ru.arink_group.deliveryapp.presentation.view.fragment.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/big_margin"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order_recycler_view"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/summary_self_export"
                android:layout_alignParentLeft="true"
                android:text="@string/self_export"/>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/summary_self_export_switch"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/summary_cost_title"
                android:text="@string/summary_cost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/summary_cost"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/summary_discount_title"
                android:text="@string/discount"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/summary_discount"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/summary_delivery_title"
                android:text="@string/delivery_cost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/summary_delivery"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/summary_title"
                android:text="@string/to_pay"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/summary"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/summary_delivery_time"/>

            <Button
                style="@style/AppTheme.MyButton"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/start_date_picker"
                android:text="@string/soon"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/summary_address_list"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/summary_address_list"/>

            <ProgressBar
                android:id="@+id/summary_address_progress"
                android:layout_alignParentEnd="true"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:id="@+id/summary_address_list_spinner"
                />

            <Button
                style="@style/AppTheme.MyButton"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/summary_create_address_button"
                android:layout_centerVertical="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/summary_create_account"
                android:visibility="gone"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            >
            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/note"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:layout_marginBottom="16dp">

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:padding="@dimen/small_margin"
                android:id="@+id/send_order_button"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonIdle"
                android:textColor="@color/colorOnAccentText"
                app:spinning_bar_color="@color/colorOnAccentText"
                android:text="@string/to_order"
                android:layout_centerInParent="true"
                app:spinning_bar_padding="0dp"
                android:layout_marginBottom="@dimen/big_margin"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
