<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.arink_group.deliveryapp.presentation.view.fragment.AddressFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/big_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryLight"
                android:padding="@dimen/medium_margin" >

            </RelativeLayout>

            <LinearLayout
                android:layout_margin="@dimen/big_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:id="@+id/expandable_address">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_title"
                        android:inputType="textCapSentences"
                        android:id="@+id/address_title"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_city"
                        android:inputType="textCapSentences"
                        android:id="@+id/address_city"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/address_street"
                        android:id="@+id/address_street"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/address_house"
                        android:id="@+id/address_house"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/address_office"
                        android:id="@+id/address_office"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/address_floor"
                        android:id="@+id/address_floor"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/address_entrance"
                        android:id="@+id/address_entrance"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        android:hint="@string/address_code"
                        android:id="@+id/address_code"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/AppTheme.MyBorderButton"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_address_button"
                    android:text="@string/address_button_submit"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
